--- a/dokumentaatio/pit-raportit/201506171512/index.html
+++ b/dokumentaatio/pit-raportit/201506171512/index.html
@@ -39,7 +39,7 @@
    .coverage_ledgend {
         position : absolute;
         height : 100%;
-        width: 100%;
+        width : 100%;
         left : 0;
         top : 0;
         text-align : center;
@@ -50,9 +50,9 @@
    }
    
    .coveragePercentage {
-        display: inline-block;
-        width: 3em;
-        text-align: right;
+    display: inline-block;
+    width: 3em;
+    text-align: right;
    }
   </style>
   
@@ -60,8 +60,8 @@
 <body>
 
 <h1>Pit Test Coverage Report</h1>
-<h2>Package Summary</h2>
-<h3>miinaharava.logiikka</h3>
+
+<h3>Project Summary</h3>
 <table>
     <thead>
         <tr>
@@ -73,18 +73,19 @@
     <tbody>
         <tr>
             <td>2</td>
-            <td>92% <div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">111/121</div></div></td>
-            <td>86% <div class="coverage_bar"><div class="coverage_complete" style="width:86%"></div><div class="coverage_ledgend">108/126</div></div></td>
+            <td>94% <div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">124/132</div></div></td>
+            <td>87% <div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">121/139</div></div></td>
         </tr>
     </tbody>
 </table>
 
 
-<h3>Breakdown by Class</h3>
+<h3>Breakdown by Package</h3>
 <table>
     <thead>
         <tr>
             <th>Name</th>
+            <th>Number of Classes</th>
             <th>Line Coverage</th>
             <th>Mutation Coverage</th>
         </tr>
@@ -92,15 +93,10 @@
     <tbody>
 
         <tr>
-            <td><a href="./Pelilauta.java.html">Pelilauta.java</a></td>
-            <td><div class="coveragePercentage">90% </div><div class="coverage_bar"><div class="coverage_complete" style="width:90%"></div><div class="coverage_ledgend">92/102</div></div></td>
-            <td><div class="coveragePercentage">85% </div><div class="coverage_bar"><div class="coverage_complete" style="width:85%"></div><div class="coverage_ledgend">103/121</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Ruutu.java.html">Ruutu.java</a></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">19/19</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">5/5</div></div></td>
+            <td><a href="./miinaharava.logiikka/index.html">miinaharava.logiikka</a></td>
+            <td>2</td>
+            <td><div class="coveragePercentage">94% </div><div class="coverage_bar"><div class="coverage_complete" style="width:94%"></div><div class="coverage_ledgend">124/132</div></div></td>
+            <td><div class="coveragePercentage">87% </div><div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">121/139</div></div></td>
         </tr>
 
      </tbody>
